Fixed overflow issue for project cards

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -548,10 +548,11 @@
 }
 
 .projectCard {
+  position: relative;
   height: auto;
-  width: 800px;
+  width: 950px;
   margin: 100px;
-  padding: 50px 40px 0 50px;
+  padding: 50px 40px 0 70px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -587,6 +588,7 @@
   font-family: recoletta;
   font-size: 40px;
   color: white;
+  letter-spacing: 1.2px;
 }
 
 .projectCard section .right {
@@ -611,6 +613,7 @@
   margin: 0;
   padding: 0;
   color: white;
+  font-size: 16px;
 }
 
 .projectCard button {
@@ -660,17 +663,13 @@
 }
 
 .projectCard .projectImageContainer {
+  width: 100%;
+  height: 100%;
   position: absolute;
-}
-
-.projectCard .projectImageContainer::before {
-  position: absolute;
-  top: -3%;
-  left: -2%;
-  width: 97%;
-  height: 110%;
-  border: 6px solid black;
-  content: '';
+  border: 5.5px solid black;
+  top: 7%;
+  left: 4.5%;
+  z-index: 10;
 }
 
 .services {
