--- a/src/styles/_projectcard.scss
+++ b/src/styles/_projectcard.scss
@@ -1,8 +1,9 @@
 .projectCard {
+    position: relative;
     height: auto;
-    width: 800px;
+    width: 950px;
     margin:100px;
-    padding: 50px 40px 0 50px;
+    padding: 50px 40px 0 70px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -27,6 +28,7 @@
             font-family: recoletta;
             font-size: 40px;
             color: white;
+            letter-spacing: 1.2px;
         }
         .right {
             justify-self: flex-end;
@@ -48,6 +50,7 @@
         margin: 0;
         padding: 0;
         color: white;
+        font-size: 16px;
     }
     button {
         margin: 0;
@@ -71,16 +74,12 @@
 
 
     .projectImageContainer {
-        position: absolute;
-      }
-      
-      .projectImageContainer::before {
-        position: absolute;
-        top: -3%;
-        left: -2%;
-        width: 97%;
-        height: 110%;
-        border: 6px solid black;
-        content: '';
+        width:100%;
+        height:100%;
+        position:absolute;
+        border:5.5px solid black;
+        top:7%;
+        left:4.5%;
+        z-index:10;
       }
 }
